<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:paddingLeft="20dp"
android:paddingRight="20dp"
    android:fillViewport="true"
    android:scrollbars="none"
tools:context="th.co.siamkubota.kubota.fragment.Step1CustomerDetailFragment">

    <LinearLayout
        android:id="@id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp">


        <TextView
            style="@style/TextTitleOrangeStyle"
            android:text="@string/service_title_usage_info"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/light_gray_border"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            />


        <LinearLayout
            style="@style/LinearLayoutSpinner">

            <ImageView
                android:src="@drawable/kindofjob_icon"
                style="@style/ImageIconStyle"/>

            <Spinner
                android:id="@+id/spinnerJobType"
                android:prompt="@string/service_hint_job_type"
                style="@style/SpinnerStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">

            <ImageView
                android:src="@drawable/product_icon"
                style="@style/ImageIconStyle"/>

            <Spinner
                android:id="@+id/spinnerProduct"
                android:prompt="@string/service_hint_product"
                style="@style/SpinnerStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">

            <ImageView
                android:src="@drawable/serial_icon"
                style="@style/ImageIconStyle"/>

            <Spinner
                android:id="@+id/spinnerModel"
                android:prompt="@string/service_hint_model"
                style="@style/SpinnerStyle"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/jobcode_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewJobId"
                android:hint="@string/service_hint_job_id"
                style="@style/EditTextStyle"/>
        </LinearLayout>


        <TextView
            style="@style/TextTitleOrangeStyle"
            android:text="@string/service_title_customer_info"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/light_gray_border"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"/>


        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/name_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewName"
                android:hint="@string/service_hint_name"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/tel_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewTel1"
                android:hint="@string/service_hint_tel_1"
                style="@style/EditTextStyle"
                android:inputType="phone"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/tel_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewTel2"
                android:hint="@string/service_hint_tel_2"
                style="@style/EditTextStyle"
                android:inputType="phone"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/product_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewMachineNumber"
                android:hint="@string/service_hint_machine_number"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/serial_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewEngineNumber"
                android:hint="@string/service_hint_engine_number"
                style="@style/EditTextStyle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/times_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewWorkHours"
                android:hint="@string/service_hint_working_hours"
                style="@style/EditTextStyle"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutSpinner">
            <ImageView
                android:src="@drawable/address_icon"
                style="@style/ImageIconStyle"/>
            <EditText
                android:id="@+id/textviewAddress"
                android:hint="@string/service_hint_addrss"
                style="@style/EditTextStyle"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
