<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="20dp">

    <TextView
        style="@style/TextTitleOrangeStyle"
        android:text="@string/service_title_usage_info"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/light_gray_border"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:textSize="15dp"
        android:text="@string/service_confirm_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/confirmButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/service_button_confirm"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_selector"></Button>
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:text="@string/service_button_cancel"
            android:textColor="@color/button_white_text_selector"
            android:background="@drawable/button_white_border_selector"></Button>

    </LinearLayout>
</LinearLayout>
