<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:divider="@drawable/list_divider"
    android:showDividers="middle">


    <TextView
        android:id="@+id/titleText"
        style="@style/TextTitleOrangeStyle"
        android:text="@string/survey_title_confirm_continue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="25dp"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="30dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
        android:paddingTop="50dp">
        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/yesButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/survey_button_yes"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_selector"></Button>
        <Button
            android:id="@+id/noButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:text="@string/survey_button_no"
            android:textColor="@color/button_white_text_selector"
            android:background="@drawable/button_white_border_selector"></Button>

    </LinearLayout>
</LinearLayout>
