<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    android:gravity="center"
    android:background="@color/white"
    tools:ignore="MissingPrefix"
    android:id="@+id/rootLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:src="@drawable/failed_icon"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"/>


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/service_popup_fail_title"/>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/service_popup_fail_message"/>


        <Button
            android:id="@+id/okButton"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/service_button_ok"
            android:background="@drawable/button_blue_selector"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            fontPath="fonts/SukhumvitSet.ttc"
            />

    </LinearLayout>


</RelativeLayout>
